--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -75,6 +75,10 @@ html, body, [ui-view] {
 	min-height:100%;
 }
 
+.text-center {
+	text-align: center;
+}
+
 //
 // .pattern {
 // 	background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAgCAYAAAASYli2AAAAAXNSR0IArs4c6QAAAGBJREFUSA1jZCARnD17djOyFmNjY19kPhMyhxrswW8gIyFvEgozdP2D38tUdyFGGJIaZqNhyMBIaZiNhiED1RP2CDRwNC+jZyTS+RhhiG4EqXl9NB2ihyAmn1CYjsAwBACOcRw6x5qRuQAAAABJRU5ErkJggg==');
