--- a/src/index.jade
+++ b/src/index.jade
@@ -68,5 +68,7 @@ html(ng-scroll="" ng-app="app")
 		body
 			//.beta.large-display
 			div(ui-view="")
+			script(async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOvDTXQxf_TLoxnyK-cTtnmqfvjMpn-TU&callback=initMap")
+			script(type="text/javascript" src="bower_components/jquery/dist/jquery.min.js")
 			script(type="text/javascript" src="vendor/vendor.min.js")
 			script(type="text/javascript" src="scripts/app.min.js")
