--- a/src/styles/molecule/_fieldset.scss
+++ b/src/styles/molecule/_fieldset.scss
@@ -26,7 +26,7 @@
 		</fieldset>
 
   script:
-  
+
 ––––
 */
 
@@ -86,6 +86,15 @@ fieldset {
 			left:13px;
 			opacity:0.5;
 			font-size: 1.8rem;
+      &.loading {
+        &::after {
+
+        }
+        &:before {
+          content: "";
+          display: none;
+        }
+      }
 		}
 		&.-right {
 			input {
