--- a/src/styles/_color.scss
+++ b/src/styles/_color.scss
@@ -8,7 +8,7 @@
 	// 8686bf collectivz 2
 
 	$color-primary:				rgb(22, 0, 102);
-	$color-complement:		rgb(209, 38, 49);
+	$color-complement:		#02AAB0;
 
 	$color-success:				#149A57;
 	$color-warning:				#EBAD23;
