--- a/src/styles/template/apl-simulator/_nav.scss
+++ b/src/styles/template/apl-simulator/_nav.scss
@@ -36,7 +36,7 @@
 	margin-top: 12px;
 	margin-right: 10px;
 	border-radius: 100%;
-	background-color: color("primary", "lighten-5");
+	background-color: color("complement", "base");
 	&:hover {
 		opacity:1;
 	}
