--- a/src/styles/template/apl-simulator/_full-form.scss
+++ b/src/styles/template/apl-simulator/_full-form.scss
@@ -23,6 +23,24 @@
   }
 }
 
+
+@keyframes levitate {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+		transform: translateY(10px);
+  }
+  100% {
+		transform: translateY(0px);
+  }
+}
+
+.levitate {
+  //animation: levitate 200ms ease;
+  animation: levitate 3s alternate ease-in-out infinite;
+}
+
 @keyframes box-flyin {
   0% { opacity: 0;  transform: translateY(-50px); }
   100% { opacity: 1;  transform: translateY(0px); }
@@ -46,27 +64,6 @@
   }
 }
 
-#result {
-  h1,h2,h3,h4,h5 {
-    color: color("primary", "base");
-    margin-bottom: $text-size / 2;
-  }
-  p {
-    color: color("grey", "base");
-  }
-  .circle-line-scale {
-    margin-bottom: $text-size;
-  }
-}
-
-#result-success {
-	width: 150px;
-	height: 100px;
-	background-image: url('../assets/imgs/svg/success.svg');
-	background-size: cover;
-  margin: 0 auto;
-}
-
 .full-form {
   z-index: 999999999999999999;
   position: absolute;
@@ -81,6 +78,39 @@
     margin: 0 auto;
     text-align: center;
     width: 100%;
+  }
+  fieldset {
+    &:after {
+      left:55px;
+      height:50px;
+      display: none;
+    }
+    i {
+      font-size: 2.4rem;
+      left: 19px;
+      bottom: 18px;
+    }
+    input {
+      min-width: 450px;
+      border: 2px dashed color("grey", "lighten-3");
+      padding: 1.75rem 1.75rem 1.75rem 2.5rem;
+      padding-left:52px;
+      box-shadow: none;
+      &:focus {
+        box-shadow: none;
+        border: 2px dashed rgba(color("primary", "lighten-1"), 0.5);
+      }
+    }
+  }
+  .button-box {
+    text-align: left;
+    label {
+      margin-left: 25px;
+      opacity:0.3;
+    }
+  }
+  .checkbox {
+    max-width: 450px;
   }
 }
 
@@ -102,12 +132,12 @@
     position: absolute;
     top:0;
     left:0;
-    background-color: color("warning", "lighten-3");
+    background-color: color("grey", "lighten-3");
   }
   .step, .info {
     position: absolute;
-    top:10px;
-    right:20px;
+    top:25px;
+    right:35px;
     h1,h2,h3,h4,h5,h6 {
       font-family: $text-font;
       color: color("grey", "lighten-1");
@@ -115,7 +145,31 @@
     }
   }
   .info {
-    left: 20px;
+    left: 35px;
+  }
+  .next {
+    position: absolute;
+    bottom: 25px;
+    right:35px;
+    button {
+      float: right;
+      margin: 0;
+      margin-bottom: 0.75rem;
+      margin-top: $text-size * 2;
+      height: auto;
+      padding: 14px 28px;
+      i {
+        margin-left: 15px;
+        transform: translateY(2px);
+        opacity: 0.5;
+      }
+    }
+    label {
+      opacity: 0.3;
+      b {
+        font-weight: 800!important;
+      }
+    }
   }
   .navigation {
 
@@ -135,22 +189,23 @@
         height: 15px;
         margin-bottom: 20px;
         background: transparent;
-        background-color: color("grey", "lighten-1");
+        border: 1px solid color("grey", "lighten-3");
+        opacity: 0.5;
+        //background-color: color("grey", "lighten-1");
         border-radius: 50%;
-        -webkit-transition: -webkit-transform 0.3s ease, opacity 0.3s ease;
         transition: transform 0.3s ease, opacity 0.3s ease;
 
         &.clickable {
-
           background-color: color("grey", "lighten-3");
           cursor:pointer;
+          opacity: 1;
           &:hover {
             background-color: color("grey", "darken-1");
           }
           &.current {
-            -webkit-transform: perspective(1000px) rotate3d(0,1,0,180deg);
             transform: perspective(1000px) rotate3d(0,1,0,180deg);
-            background-color: color("grey", "darken-1") !important;
+            background-color: color("primary", "base") !important;
+            border: 1px solid color("primary", "base");
           }
 
         }
@@ -264,6 +319,21 @@
   background-image: url('../assets/imgs/svg/handicap.svg');
 }
 
+.radio-custom label.french::after {
+  background-image: url('../assets/imgs/svg/french.svg');
+}
+
+.radio-custom label.european::after {
+  background-image: url('../assets/imgs/svg/european.svg');
+}
+
+.radio-custom label.other::after {
+  background-image: url('../assets/imgs/svg/other.svg');
+}
+
+.radio-custom label.unfit::after {
+  background-image: url('../assets/imgs/svg/unfit.svg');
+}
 
 .radio-custom label:hover::after,
 input[type="radio"]:focus + label::after,
