--- a/src/styles/template/apl-simulator/_home.scss
+++ b/src/styles/template/apl-simulator/_home.scss
@@ -29,6 +29,18 @@ section.background {
 	width: 100%;
 	background-color: darken(#8DB2C8, 10%);
 	position:relative;
+	padding: 75px 0;
+	// height:calc(60% + 83px);
+	// min-height: calc(60% + 83px);
+	overflow: visible;
+	background: #02AAB0; /* fallback for old browsers */
+	background: linear-gradient(to left, #02AAB0 , #7092c5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	h1.punchline {
+		font-weight: 800!important;
+	}
+	.button {
+		color:white;
+	}
 	&.light {
 		background-color: lighten(#8DB2C8, 10%);
 	}
@@ -39,12 +51,44 @@ section.background {
 		margin-top: 110px;
 		margin-bottom: 60px;
 	}
+  .gradient {
+        background-image: linear-gradient(-135deg, rgba(209, 38, 49, 0.9), rgba(22, 0, 102, 0.9)) !important;
+  }
+  .image {
+    filter: saturate(0);
+  }
+  .shape {
+    width:100%;
+    min-height:83px;
+    background-color: transparent;
+    position:relative;
+    margin: 0;
+    margin-bottom: 0;
+    position: absolute;
+    bottom:0;
+    &:after {
+      content: "";
+      width:100%;
+      min-height:83px;
+      position:absolute;
+      background-repeat: no-repeat;
+      bottom:0px;
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="83" width="2880" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" viewBox="0 0 2880 83.000002"><g transform="matrix(1 0 0 .91301 0 -877.74)"><path d="m-0.8933 966.1v87.132h2885v-87.132h-15.504l-1431 84.452-1428.6-84.4z" fill-rule="evenodd" fill="#fff"/></g></svg>');
+      background-position: center;
+    }
+  }
+
 }
 
 #content {
 	z-index: 5;
 }
 
+.args .row {
+	.four.col:first-child, .four.col:last-of-type {
+		margin-top:$text-size;
+	}
+}
 
 
 .small-circle{
