--- a/src/templates/home.jade
+++ b/src/templates/home.jade
@@ -4,8 +4,8 @@ nav
 			.twelve.col
 				a#logo.pull-left(ui-sref-active="active" ui-sref="nav.home")
 				//- a.pull-left.uppercase.large-display(ui-sref-active="active" ui-sref="nav.assistance" compile-unsafe="'views.nav.support' | translate")
-				div.pull-right.half-left(ng-translate-language-select)
-				a.button.small.pull-right.-primary(ui-sref-active="active" ui-sref="nav.form" compile-unsafe="'views.nav.punchline' | translate")
+				div.-round.pull-right.half-left(ng-translate-language-select)
+				a.button.-round.small.pull-right.-line-primary(ui-sref-active="active" ui-sref="nav.form" compile-unsafe="'views.nav.punchline' | translate")
 
 section.background
 	.main-texture
@@ -13,18 +13,18 @@ section.background
 	//#welcome.large-display
 	#content.container
 		.twelve.col.double-top
-			h3.text-right.six-top.remove-bot.text-white
-				b(compile-unsafe="'views.main.punchline' | translate")
-			h6.text-right.text-white.double-bot(compile-unsafe="'views.main.subline' | translate")
+			h1.punchline.text-right.text-white.remove-bot(compile-unsafe="'views.main.punchline' | translate")
+			h5.text-right.text-white.add-bot(compile-unsafe="'views.main.subline' | translate")
 			.quad-bot
-				a.cta.button.half-right.-primary(ui-sref="nav.form" compile-unsafe="'views.main.cta1' | translate")
-			.clearfix
+				a.cta.touch.button.half-right.-big.-round.-line-grey-lighten-5(ui-sref="nav.form" compile-unsafe="'views.main.cta1' | translate")
+	.invite-to-scroll
+	.shape
+	
 #cookie(ng-show="setCookie == false")
 	.container
 		.row
 			.twelve.col
-				p.pull-left.
-					 Ce site utilise des cookies pour rendre son site plus simple. <a ui-sref="nav.cookies">En savoir plus sur les cookies</a>.
+				p.pull-left(compile-unsafe="'views.cookie.info' | translate")
 				i.icon.-cross.pull-right(ng-click="updateCookie()")
 section.args.text-center
 	.container
@@ -34,13 +34,13 @@ section.args.text-center
 				h5(compile-unsafe="'views.main.argTitle1' | translate")
 				p(compile-unsafe="'views.main.argText1' | translate")
 			.four.col
-				.circle.small-circle.circle-simple
-				h5(compile-unsafe="'views.main.argTitle2' | translate")
-				p(compile-unsafe="'views.main.argText2' | translate")
-			.four.col
 				.circle.small-circle.circle-quick
 				h5(compile-unsafe="'views.main.argTitle3' | translate")
 				p(compile-unsafe="'views.main.argText3' | translate")
+			.four.col
+				.circle.small-circle.circle-simple
+				h5(compile-unsafe="'views.main.argTitle2' | translate")
+				p(compile-unsafe="'views.main.argText2' | translate")
 //- section.background
 //- 	#peon
 //- 	.main-texture
@@ -55,13 +55,6 @@ footer
 		.row.text-white.double-bot.quad-top
 			.three.col
 				h6(compile-unsafe="'views.footer.title1' | translate")
-				ul.no-style
-					li
-						a(href="http://app.peon.fr/inscription" compile-unsafe="'views.footer.list1_1' | translate")
-					li
-						a(href="http://app.peon.fr/" compile-unsafe="'views.footer.list1_2' | translate")
-					li
-						a(ui-sref="nav.faq" compile-unsafe="'views.footer.list1_3' | translate")
 			.three.col
 				h6(compile-unsafe="'views.footer.title2' | translate")
 				ul.no-style
